--- a/template/include/comments.html
+++ b/template/include/comments.html
@@ -5,8 +5,28 @@
     {{ custom_comment }}
 {% else %}
 
+<!-- 多说评论框 start -->
+<div class="ds-thread" data-thread-key= {{ post.url_path }} data-title={{ post.title }} data-url={{ post.url_path }}></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+    var duoshuoQuery = {short_name:"yannisxu"};
+    (function() {
+       var ds = document.createElement('script');
+       ds.type = 'text/javascript';ds.async = true;
+       ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+       ds.charset = 'UTF-8';
+       (document.getElementsByTagName('head')[0]
+          || document.getElementsByTagName('body')[0]).appendChild(ds);
+        })();
+</script>
+<!-- 多说公共JS代码 end -->
+
 <div id="fb_comments_container">
-    <ul id="fb_comments">
+<!--     <a href="http://t.cn/RZv4c2L" target="_blank">
+        <img src="http://ww1.sinaimg.cn/large/5322f6a5gw1enlo4ab79hj20og02bq38.jpg" style="border:none; height: auto; width:100%;">
+    </a> -->
+    <ul id="fb_comments" style="display: none;">
         {% set comments = get_comments(context_doc) %}
         {% for comment in comments %}
             <li class="comment">
