--- a/template/include/footer.html
+++ b/template/include/footer.html
@@ -6,13 +6,22 @@
 
 <footer id="footer" class="inner"><p>
   	{% if site.configs.author %}
-	Copyright © 2013 - {{ site.configs.author }} -
+	Copyright © 2014 - {{ site.configs.author }} -
 	{% endif %}
-  	<span class="credit">Powered By <a target='_blank' href="http://www.farbox.com">FarBox</a> - Theme By <a href="http://rock.farbox.com">Rock</a> & <a href="http://blog.if404.com">枫叶向风</a>
+  	<span class="credit">Powered By <a target='_blank' href="http://www.farbox.com">FarBox</a> 
     <br>
-			- - - <a href="http://blog.if404.com/post/skill/template-grayshadem-readme">克隆模板</a>.-.<a href="https://github.com/mapleobserver/FarBox-Template-GreyshadeM">Github</a> - - -
+			- - - <a href="http://yannisxu.me/template">克隆模板</a>.-.<a href="https://github.com/yannisxu/FarBox-Template-GreyshadeM">Github</a> - - -
 	<br>
 	</span>
 	{{ site.configs.analytics }}
 </footer>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-59234266-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
